--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,8 @@
 <body>
     <h1>My First Web Page</h1>
     <p>This is a paragraph.</p>
-    <p>This is a change.</p>
+    <p>This is a change from clone 1.</p>
+    <p>This is a change from clone 2.</p>
 </body>
 
 </html>
